created html.index boilerPlate

--- a/index.html
+++ b/index.html
@@ -8,6 +8,56 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#welcome-section">About</a>
+                </li>
+                <li>
+                    <a href="#projects-section">Projects</a>
+                </li>
+                <li>
+                    <a href="#contact-section">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section id="welcome-section" class="welcome-section">
+        <h1>Hello World, I'm Skalex!</h1>
+        <p>a web developer in learning-mode!</p>
+    </section>
+
+    <section id="projects" class="projects-section">
+        <h2 class="projects-section-header">These are some of my projects</h2>
+        
+        <div class="projects-grid">
+            <a href="#" target="_blank" class="project project-tile">Project1</a>
+            <a href="#" target="_blank" class="project project-tile">Project2</a>
+            <a href="#" target="_blank" class="project project-tile">Project3</a>
+            <a href="#" target="_blank" class="project project-tile">Project4</a>
+            <a href="#" target="_blank" class="project project-tile">Project5</a>
+            <a href="#" target="_blank" class="project project-tile">Project6</a>
+        </div>
+    </section>
+
+    <section id="contact" class="contact-section">
+        <div class="contact-section-header">
+            <h2>looking forward to work with you!</h2>
+            <p>How you doing...?</p>
+        </div>
+
+        <!--Aqui van los social networkd con el "i" elements, github, discord, send email.-->
+        <div class="contact-links">
+            <a id="profile-link" href="https://github.com/Venecoinchina" target="_blank" class="btn contact-details">Github</a>
+            <a href="#" target="_blank" class="btn contact-details">Discord</a>
+            <a href="mailto:skalexstuch@me.com" target="_blank" class="btn contact-details">Email</a>
+            <a href="#" target="_blank" class="btn contact-details">Wechat</a>
+        </div>
+    </section>
+    <footer>
+        <p>2022 All Rights Reserved by Constitution!</p>
+        <p>© Created by the Author Mr. Skalex Stuch "ElMaestro"</p>
+    </footer>
 </body>
 </html>
