--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav-list">
                 <li>
                     <a href="#welcome-section">About</a>
                 </li>
