--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             
             <a href="#" target="_blank" class="btn contact-details"><span><img src="./icons/004-wechat.png" alt=""></span> Wechat</a>
 
-            <a href="https://www.linkedin.com/in/skalex-stuch-5a99b720" target="_blank" class="btn contact-details"><span><img src="./icons/005-linkedin.png" alt=""></span> Linkedin</a>
+            <a href="#" target="_blank" class="btn contact-details"><span><img src="./icons/005-linkedin.png" alt=""></span> Linkedin</a>
     
         </div>
     </section>
