--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#projects-section">Projects</a>
                 </li>
                 <li>
-                    <a href="#contact-section">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
